--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1", default-features = false }
 bytes = { version = "^1.0", default-features = false }
 
-async-std = { version = "^1.6", optional = true }
+async-std = { version = "^1.6", features = ["unstable"], optional = true }
 
 [dev-dependencies]
 pretty_env_logger = { version = "^0.4", default-features = false }
