--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,19 @@ doctest = false
 [features]
 test_local = ["std"]
 default = ["std"]
-std = ["crc32fast/std", "async-std"]
+std = ["crc32fast/std", "tokio"]
 
 [dependencies]
 cfg-if = { version = "^1.0", default-features = false }
 futures = {version = "^0.3", features = ["alloc"], default-features = false }
 crc32fast = { version = "^1.2", default-features = false }
-miniz_oxide = { version = "^0.4", default-features = false }
+miniz_oxide = { version = "^0.5", default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1", default-features = false }
 bytes = { version = "^1.0", default-features = false }
 
-async-std = { version = "^1.6", features = ["unstable"], optional = true }
+tokio = { version = "^1.0", features = ["sync", "fs", "rt"], optional = true }
 
 [dev-dependencies]
-pretty_env_logger = { version = "^0.4", default-features = false }
-async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }
+pretty_env_logger = { version = "^0.4" }
+tokio = { version = "^1.0", features = ["macros", "rt"] }
